# RAG-youtuber-lab

./: .gitignore  README.md  explorations.ipynb  function_app.py  ingestion.py  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  rag.py
frontend/: app.py
